--- a/kevinos/index.html
+++ b/kevinos/index.html
@@ -97,13 +97,13 @@
             <!-- Music Player Icon -->
             <button class="desktop-icon" id="musicIcon">
                 <span class="icon-emoji">🎵</span>
-                <span class="icon-label">music.app</span>
+                <span class="icon-label">Music.app</span>
             </button>
 
             <!-- Recipes Icon (desktop only easter egg) -->
             <button class="desktop-icon desktop-only" data-window="recipesdb">
                 <span class="icon-emoji">🗃️</span>
-                <span class="icon-label">recipes.db</span>
+                <span class="icon-label">Recipes.db</span>
             </button>
 
             <!-- Spacer -->
@@ -112,11 +112,11 @@
             <!-- Easter Eggs -->
             <button class="desktop-icon" id="partyBtn">
                 <span class="icon-emoji">🪩</span>
-                <span class="icon-label">party.app</span>
+                <span class="icon-label">Party.app</span>
             </button>
             <button class="desktop-icon virus-icon" id="virusBtn">
                 <span class="icon-emoji">💀</span>
-                <span class="icon-label">do_not_click.exe</span>
+                <span class="icon-label">Do_Not_Click.exe</span>
             </button>
             <button class="desktop-icon" id="videosBtn">
                 <span class="icon-emoji">📺</span>
