--- a/kevinos/index.html
+++ b/kevinos/index.html
@@ -322,7 +322,6 @@
                     <span class="window-path">~/kevin/</span>
                 </header>
                 <div class="window-content">
-                    <div class="folder-path">~/kevin/experience</div>
                     <div class="exp-list">
                         <article class="exp-item" onclick="this.classList.toggle('open')">
                             <div class="exp-icon"><img src="https://middleton.io/images/gridstrong-logo.png"
@@ -1563,6 +1562,7 @@
                     <span class="window-dot green"></span>
                 </div>
                 <div class="recycle-title">🗑️ Recycle Bin</div>
+                <span class="window-path">~/kevin/</span>
             </div>
             <div class="recycle-content">
                 <div class="recycle-file" id="recycleNote">
@@ -1581,11 +1581,11 @@
                     <span class="window-dot green"></span>
                 </div>
                 <div class="notepad-title">📝 note-to-you.txt</div>
+                <span class="window-path">~/kevin/Recycle Bin/</span>
             </div>
             <div class="notepad-content">
                 <p class="notepad-heading">🗑️ You found the trash.</p>
                 <p>Most people don't look here. I like that you did.</p>
-                <p>Here's what I threw away while building this: about 40 hours of self-doubt, a few drafts that tried too hard, and the voice that said "this is too much." I kept the parts that felt like me.</p>
                 <p>Sometimes the best stuff is in the bin: old ideas, weird experiments, the things that didn't fit anywhere else.</p>
                 <p>You're curious. I like that. You're probably the type I'd want to work with.</p>
                 <p class="notepad-signature">— Kevin</p>
@@ -1606,6 +1606,7 @@
                     Videos.app
                     <span class="file-badge app">APP</span>
                 </div>
+                <span class="window-path">~/kevin/</span>
             </div>
             <div class="video-content">
                 <img src="https://middleton.io/kevinos/images/rickroll-meme.gif" alt="Video" class="video-gif">
