--- a/catdad/index.htm
+++ b/catdad/index.htm
@@ -90,8 +90,10 @@
           It's software, not magic. And we're not curing cancer. <span class="handwritten">(Unless you are, in which case, respect!)</span>
         </p>
         <p>
-          I love doing great work with great people. Give me a hard problem, a team that collaborates for real, and an
-          environment where everyone feels safe to speak up. That's when I'm happy~ ♡
+          I do my best work when I can say the honest thing without fear. I want that for the people I work with too — teams that can skip the posturing and just <em>talk</em> build better stuff~ ♡
+        </p>
+        <p>
+          Give me a hard problem, a team that actually collaborates, and psychological safety. That's when I'm happy. If your team has that energy, we'll get along great! (◕ᴗ◕✿)
         </p>
       </section>
 
@@ -103,20 +105,24 @@
         <ul class="kawaii-list">
           <li>I think out loud (that's the collaboration working)~</li>
           <li>I'll learn any tool, automate the boring stuff, fill gaps without being asked</li>
-          <li>I have opinions, but I'll change my mind when you have better info ✧</li>
+          <li>I have opinions, but I'll change my mind if you have better info ✧</li>
           <li>I focus on real progress, not theater <span class="nowrap">(ノ◕ヮ◕)ノ*:・゚✧</span></li>
         </ul>
       </section>
 
       <div class="section-divider">・:*:・゚★,・:*:・゚☆</div>
 
-      <!-- PSYCHOLOGICAL SAFETY -->
-      <section class="kawaii-section kawaii-callout rainbow-border">
-        <h2>💬 On speaking up</h2>
-        <p>
-          I speak my mind when I feel safe and I want to build that same environment for you. Teams do their best work when people can say the honest thing without fear~
-        </p>
-        <p class="kawaii-closer">If your team has that energy, we'll get along great! (◕ᴗ◕✿)</p>
+      <!-- FAIR WARNING -->
+      <section class="kawaii-section rainbow-border">
+        <h2>⚠️ Fair Warning</h2>
+        <p>I'm probably not your person if:</p>
+        <ul class="kawaii-list">
+          <li>You don't like the occasional ad hoc meeting (I promise, it really be quick!)</li>
+          <li>"Let's take this offline" means "let's never talk about this again"</li>
+          <li>Consensus is more important than clarity</li>
+          <li>The roadmap is a vibes-based secret ✧</li>
+        </ul>
+        <p class="kawaii-closer">No shade — just saving us both time~ (◕ᴗ◕✿)</p>
       </section>
 
       <div class="section-divider">₊˚⊹ ᰔ ₊˚⊹ ᰔ ₊˚⊹</div>
@@ -124,15 +130,15 @@
       <!-- THE CATS -->
       <section class="kawaii-section rainbow-border">
         <h2 class="gradient-text">🐱 The Fur Babies</h2>
-        <p>Yes, there are three. They're part of the deal~ ♡</p>
+        <p>Yes, there are three. They've taught me a lot about teamwork~ ♡</p>
         <div class="cats-photo wiggle-hover">
           <img src="https://middleton.io/catdad/images/blue_scarlet_luna.png"
             alt="Blue, Scarlet, and Luna, the three cats">
         </div>
         <ul class="kawaii-list cat-list">
-          <li><strong>Blue</strong>: The lawyer. Always advocating for the group. Very professional. ⚖️</li>
-          <li><strong>Scarlet</strong>: Cutesy. Demure. Very mindful. The influencer of the household. 💅</li>
-          <li><strong>Luna</strong>: The baby. Part monkey, part hunter. Will do anything for sliced turkey. 🦃</li>
+          <li><strong>Blue</strong>: The advocate. If someone's not getting their fair share, he'll let you know. ⚖️</li>
+          <li><strong>Scarlet</strong>: The diplomat. Cute, strategic, and always knows when to make an entrance. 💅</li>
+          <li><strong>Luna</strong>: The chaos agent. Will knock things off tables to see what happens. Sometimes innovation means starting over? 💥</li>
         </ul>
         <p class="kawaii-closer">I also love dogs. Please tell your dog I said hi~ 🐕✨</p>
       </section>
@@ -152,6 +158,14 @@
       </section>
 
       <div class="section-divider">✧･ﾟ: *✧･ﾟ:* 　*:･ﾟ✧*:･ﾟ✧</div>
+
+      <!-- HOT TAKE -->
+      <section class="kawaii-section rainbow-border">
+        <h2>🔥 Hot take corner</h2>
+        <p>Stand-ups should not be async and Jira is fine actually. Fight me.</p>
+      </section>
+
+      <div class="section-divider"><span class="nowrap">₊˚ʚ ᗢ₊˚✧ ﾟ.</span></div>
 
       <!-- THE WORK -->
 <section class="kawaii-section rainbow-border" id="serious-stuff">
