--- a/index.htm
+++ b/index.htm
@@ -31,6 +31,40 @@
     <meta name="twitter:image" content="https://middleton.io/images/kevin-middleton-saas-product-manager.png">
 
     <meta name="theme-color" content="#0A0A0C">
+
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Kevin Middleton",
+        "jobTitle": "Full Stack Product Manager",
+        "url": "https://middleton.io",
+        "image": "https://middleton.io/images/profile-picture.jpg",
+        "sameAs": [
+            "https://www.linkedin.com/in/kevinmiddleton",
+            "https://github.com/kevinmmiddleton"
+        ],
+        "address": {
+            "@type": "PostalAddress",
+            "addressLocality": "New York",
+            "addressRegion": "NY",
+            "addressCountry": "US"
+        },
+        "alumniOf": {
+            "@type": "CollegeOrUniversity",
+            "name": "Virginia Tech"
+        },
+        "knowsAbout": [
+            "Product Management",
+            "SaaS",
+            "Product Strategy",
+            "A/B Testing",
+            "Cross-Functional Leadership"
+        ]
+    }
+    </script>
+
     <!-- Privacy-friendly analytics by Plausible -->
     <script async src="https://plausible.io/js/pa-CycHtdoRKtjDMtDpjBTA4.js"></script>
     <script>
