--- a/catdad/index.htm
+++ b/catdad/index.htm
@@ -5,6 +5,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Product Manager + Cat Dad · ✨🐱✨</title>
+  <link rel="icon" type="image/png" href="https://middleton.io/catdad/images/sparkles.png">
+  <link rel="apple-touch-icon" href="https://middleton.io/catdad/images/sparkles.png">
 
   <!-- Open Graph -->
   <meta property="og:type" content="website" />
