--- a/nyc/index.htm
+++ b/nyc/index.htm
@@ -4,7 +4,18 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Kevin Middleton — NYC</title>
+  <title>Kevin Middleton — Full Stack Product Manager in NYC</title>
+  <meta name="description" content="Kevin Middleton is a full stack product manager in NYC with 12 years of experience at Oracle, Lever, Rocket Lawyer, and HVAC.com. Currently seeking a team that values ownership and direct collaboration.">
+  <meta name="author" content="Kevin Middleton">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://middleton.io/nyc/">
+  <link rel="icon" href="https://middleton.io/nyc/images/statue-of-liberty.png" type="image/png">
+  <link rel="apple-touch-icon" href="https://middleton.io/nyc/images/statue-of-liberty.png">
+
+  <!-- Preconnect for performance -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://plausible.io">
 
   <!-- Open Graph -->
   <meta property="og:type" content="website" />
@@ -26,6 +37,30 @@
   <link rel="stylesheet" href="../styles.css">
   <!-- NYC page styles -->
   <link rel="stylesheet" href="nyc.css">
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Kevin Middleton",
+    "jobTitle": "Full Stack Product Manager",
+    "url": "https://middleton.io",
+    "sameAs": [
+      "https://www.linkedin.com/in/kevinmiddleton"
+    ],
+    "knowsAbout": ["Product Management", "Enterprise SaaS", "Consumer Products", "Platform Development"],
+    "workLocation": {
+      "@type": "Place",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "New York City",
+        "addressRegion": "NY",
+        "addressCountry": "US"
+      }
+    }
+  }
+  </script>
+
   <!-- Privacy-friendly analytics by Plausible -->
   <script async src="https://plausible.io/js/pa-7yL6FEEjS-cJuMu1GxPer.js"></script>
   <script>
@@ -48,7 +83,7 @@
           I don't take myself too seriously.
         </p>
 
-        <div class="meta">Product Manager · New York City</div>
+        <div class="meta">Full Stack Product Manager · New York City</div>
         <div class="meta status">Looking for my next team</div>
 
         <div class="nyc-hero-ctas">
@@ -105,11 +140,10 @@
         </p>
 
         <div class="nyc-logos">
-          <img src="https://middleton.io/images/oracle-logo-transparent.png" alt="Oracle" title="Oracle">
-          <img src="https://middleton.io/images/rocket-lawyer-logo-transparent-1.png" alt="Rocket Lawyer"
-            title="Rocket Lawyer">
-          <img src="https://middleton.io/images/lever-logo-transparent.png" alt="Lever" title="Lever">
-          <img src="https://middleton.io/images/hvac-com-logo-color.png" alt="HVAC.com" title="HVAC.com">
+          <img src="https://middleton.io/images/oracle-logo-transparent.png" alt="Oracle" title="Oracle" loading="lazy">
+          <img src="https://middleton.io/images/rocket-lawyer-logo-transparent-1.png" alt="Rocket Lawyer" title="Rocket Lawyer" loading="lazy">
+          <img src="https://middleton.io/images/lever-logo-transparent.png" alt="Lever" title="Lever" loading="lazy">
+          <img src="https://middleton.io/images/hvac-com-logo-color.png" alt="HVAC.com" title="HVAC.com" loading="lazy">
         </div>
 
         <p style="margin-top: var(--spacing-lg);">
@@ -120,9 +154,10 @@
       <!-- CTA -->
       <section class="nyc-cta" id="cta">
         <h4>If this resonates</h4>
-        <a href="https://calendly.com/kevin-middleton/15min" target="_blank"
+        <a href="https://calendly.com/kevin-middleton/let-s-talk" target="_blank"
           class="btn btn-primary plausible-event-name=Calendly+Click">Let's talk</a>
         <p class="cta-note">Coffee in NYC or virtual. Your call.</p>
+        <p class="cta-alt">Or connect on <a href="https://www.linkedin.com/in/kevinmiddleton" target="_blank" class="plausible-event-name=LinkedIn+Click">LinkedIn</a></p>
       </section>
 
     </div>
