--- a/fixer/index.htm
+++ b/fixer/index.htm
@@ -4,7 +4,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Kevin Middleton · Product Help</title>
+  <title>The Fixer: Product Problem Solving | Kevin Middleton</title>
+  <meta name="description" content="Something in your product isn't working. That's a solvable problem. Get 30 minutes of calm, judgment-free product thinking with someone who's been there." />
+
+  <!-- Favicon -->
+  <link rel="icon" href="https://middleton.io/fixer/images/pill.png" type="image/png">
+  <link rel="apple-touch-icon" href="https://middleton.io/fixer/images/pill.png">
 
   <!-- Open Graph -->
   <meta property="og:type" content="website" />
@@ -24,9 +29,35 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;600&display=swap" as="style">
+  <link rel="preload" href="https://middleton.io/fixer/images/desktop.jpg" as="image">
   <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../styles.css">
   <link rel="stylesheet" href="fixer.css">
+  <!-- Structured Data for SEO -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Service",
+    "name": "The Fixer - Product Thinking",
+    "description": "30 minutes of calm, judgment-free product thinking help for product managers and founders who are stuck.",
+    "provider": {
+      "@type": "Person",
+      "name": "Kevin Middleton",
+      "url": "https://middleton.io",
+      "jobTitle": "Product Consultant",
+      "sameAs": "https://www.linkedin.com/in/kevinmiddleton"
+    },
+    "url": "https://middleton.io/fixer",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    },
+    "areaServed": "Worldwide"
+  }
+  </script>
+
   <!-- Privacy-friendly analytics by Plausible -->
 <script async src="https://plausible.io/js/pa-AXYqKDodwwHKXKB__tJzQ.js"></script>
 <script>
@@ -36,7 +67,8 @@
 </head>
 
 <body>
-  <main class="fixer-page">
+  <a href="#main-content" class="skip-link">Skip to content</a>
+  <main class="fixer-page" id="main-content">
     <div class="desk-surface">
 
       <!-- Desk Props -->
@@ -113,12 +145,15 @@
             <div class="fixer-rx-line">
               <span>Refills:</span> <em class="rx-handwriting">As needed</em>
             </div>
+            <div class="fixer-rx-line">
+              <span>Cost:</span> <em class="rx-handwriting">Free</em>
+            </div>
 
             <a href="https://calendly.com/kevin-middleton/let-s-talk" target="_blank" class="fixer-btn plausible-event-name=Calendly+Click">Let's talk</a>
 
             <!-- Signature -->
             <div class="fixer-rx-sig">
-              <img src="https://middleton.io/fixer/images/signaure.png" alt="Signature" class="rx-signature-img">
+              <img src="https://middleton.io/fixer/images/signature.png" alt="Kevin Middleton's signature" class="rx-signature-img">
             </div>
           </div>
 
